added socket submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "client"]
 	path = client
 	url = git@github.com:import-useteam-from-futureproof/client.git
+[submodule "socket"]
+	path = socket
+	url = git@github.com:import-useteam-from-futureproof/socket-server.git
